tests/test_files/default/neg/bad_flow_WL.s
	mov r1 cgp
	restrict r1 ([R W LG LM], GLOBAL)
	restrict r1 ([R WL LG LM], GLOBAL)
	halt
